fix: styling update menu lower spacing desktop

--- a/wordpress/miles_2020/style.css
+++ b/wordpress/miles_2020/style.css
@@ -1936,7 +1936,7 @@ Other menus
     grid-template-columns: repeat(1, auto);
     grid-gap: 84px;
     column-gap: 84px;
-    row-gap: 84px;
+    row-gap: 1.5em;
   }
 }
 
